typescript/checker/tests/conformance/interfaces/declarationMerging/mergeTwoInterfaces.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            155,
        ),
        hi: BytePos(
            156,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/interfaces/declarationMerging/mergeTwoInterfaces.ts:12:5
   |
12 | var a: A;
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            314,
        ),
        hi: BytePos(
            315,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/interfaces/declarationMerging/mergeTwoInterfaces.ts:26:5
   |
26 | var b: B<string>;
   |     ^

